# i3status-rust

./: Cargo.toml
src/blocks/: pomodoro.rs
