[package]
name = "i3status-rs"
description = "A feature-rich and resource-friendly replacement for i3status, written in Rust."
repository = "https://github.com/greshake/i3status-rust/"
readme = "README.md"
license = "GPLv3"
version = "0.13.1"
authors = ["Kai Greshake <development@kai-greshake.de>",
           "Contributors on GitHub (https://github.com/greshake/i3status-rust/graphs/contributors)"]
edition = "2018"

[features]
default = ["pulseaudio"]
pulseaudio = ["libpulse-binding"]
# Opt-in block profiling, intended for developers.
profiling = ["cpuprofiler", "progress"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
dbus = "0.8"
nix = "0.16.0"
i3ipc = "0.10.1"
num-traits = "0.2"
crossbeam-channel = "0.4"
inotify = "0.8.2"
maildir = "0.3"
libpulse-binding = { optional = true, version = "2.15.0", default-features = false }
notmuch = { optional = true, version = "0.6.0" }
# Used only in debug build mode
# for profiling blocks
cpuprofiler = { version = "0.0.4", optional = true }
progress = { version = "0.2", optional = true }

[dependencies.clap]
version = "2.31"
default-features = false

[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std"]

[package.metadata.deb]
name = "i3status-rust"
maintainer = "Aaron Jacobs <atheriel@gmail.com>"
extended-description = """\
Provides provides a way to display 'blocks' of system information (time, \
battery status, volume, etc) on the i3 (https://i3wm.org/) bar.
.
Also compatible with Sway (http://swaywm.org/).
.
For a list of available blocks, see the block documentation in \
usr/share/docs/i3status-rust/blocks.md."""
license-file = ["LICENSE", "0"]
depends = "$auto, libdbus-1-3 (>=1.6), libpulse0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/i3status-rs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/i3status-rust/README", "644"],
    ["blocks.md", "usr/share/doc/i3status-rust/", "644"],
    ["example_config.toml", "usr/share/doc/i3status-rust/", "644"],
    ["example_theme.toml", "usr/share/doc/i3status-rust/", "644"],
    ["example_icon.toml", "usr/share/doc/i3status-rust/", "644"]
]
changelog = "debian/changelog"
